add registered and showing all objects